objects/LLC_BI__Date_Template_Recurrence__c.object
<CustomObject>
    <description>This custom object defines the reoccurring date template data for a date template.</description>
    <fields>
        <fullName>LLC_BI__Date_Template__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The system automatically populates this required lookup field to reference the parent Date_Template.</description>
        <inlineHelpText>This lookup field references the Parent Date_Template for this Month-Day combination.</inlineHelpText>
        <label>Date_Template</label>
        <referenceTo>LLC_BI__Date_Template__c</referenceTo>
        <relationshipLabel>Date Template Recurrences</relationshipLabel>
        <relationshipName>Date_Template_Recurrences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Day__c</fullName>
        <description>Administrators populate this number field to set the day on the date template. By default, it is blank.</description>
        <inlineHelpText>Select the day for this template</inlineHelpText>
        <label>Day</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Month__c</fullName>
        <description>Administrators populate this optional picklist field to set the month on the date template. By default, it is blank.</description>
        <inlineHelpText>Select the month for this template</inlineHelpText>
        <label>Month</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <label>January</label>
                </value>
                <value>
                    <fullName>2</fullName>
                    <label>February</label>
                </value>
                <value>
                    <fullName>3</fullName>
                    <label>March</label>
                </value>
                <value>
                    <fullName>4</fullName>
                    <label>April</label>
                </value>
                <value>
                    <fullName>5</fullName>
                    <label>May</label>
                </value>
                <value>
                    <fullName>6</fullName>
                    <label>June</label>
                </value>
                <value>
                    <fullName>7</fullName>
                    <label>July</label>
                </value>
                <value>
                    <fullName>8</fullName>
                    <label>August</label>
                </value>
                <value>
                    <fullName>9</fullName>
                    <label>September</label>
                </value>
                <value>
                    <fullName>10</fullName>
                    <label>October</label>
                </value>
                <value>
                    <fullName>11</fullName>
                    <label>November</label>
                </value>
                <value>
                    <fullName>12</fullName>
                    <label>December</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The system automatically populates this field with a unique external identifier that associates the record with its matching record in an external system. The field can also be used to efficiently associate related records when importing data into nCino, without the need to know the internal ID for the record.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Enter a unique external identifier.</inlineHelpText>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Date Template Recurrence</label>
    <nameField>
        <displayFormat>DT-{0000000}</displayFormat>
        <label>Date Template Recurrence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Date Template Recurrences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>